# compliance-agent-skills

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agent.py  bootstrap.ps1  bootstrap.sh  pyproject.toml  redaction.py  requirements-dev.txt  requirements-lock.txt  requirements.in  requirements.txt  skills-index.md
.github/: CODEOWNERS  about.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
agents/: cmmc-assessor.md  compliance-architect.md  coppa-privacy-officer.md  fedramp-3pao-advisor.md  ferpa-compliance-officer.md  gdpr-dpo-advisor.md  glba-compliance-officer.md  hipaa-privacy-officer.md  hitech-breach-coordinator.md  nist-ai-rmf-assessor.md  pci-qsa-reviewer.md  soc2-auditor.md  sox-it-auditor.md  state-privacy-analyst.md
compliance_tests/: conftest.py  support.py  test_agent.py  test_deanonymize_unit.py  test_redaction.py
docs/: architecture.md  claude-setup.md  coverage-roadmap.md  cursor-setup.md  getting-started.md  jetbrains-setup.md  plugin-publishing.md  project-status.md  redaction-limitations.md  regulatory-reports.md  skill-anatomy.md  sme-review.md  vscode-setup.md
examples/: custom-ssn-recognizer.py
hooks/: README.md  audit-mode.sh  hooks.json  phi-redaction-guard.ps1  phi-redaction-guard.sh  release-guard.sh  session-start.ps1  session-start.sh
jetbrains-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mcp/: README.md  github.mcp.json  playwright.mcp.json  postgres.mcp.json  presidio.mcp.json  slack.mcp.json  terraform.mcp.json
references/: README.md  ccpa-cpra-checklist.md  cmmc-nist-800-171-checklist.md  compliance-as-code-patterns.md  coppa-checklist.md  (+15 more)
(+143 files in other folders)
